# GFXLib

./: CMakeLists.txt  debug.bat  run.bat
include/: Chars.hpp  Form.hpp  Printer.hpp  Printer.ipp  gfx.hpp  pch.hpp
src/: Printer.cpp  main.cpp
